--- a/abc147.md
+++ b/abc147.md
@@ -15,6 +15,9 @@ $A_{ij}$を足すか引くか選んでいく。累積値の絶対値の最小値
 
 $O(n^4)$をやることになり時間制約が厳しいので、bitset高速化を行う。
 
+### Citation
+https://atcoder.jp/contests/abc147/tasks/abc147_e
+
 ## F, Sum Difference
 ### Difficulty
 
@@ -37,3 +40,7 @@ k個の要素を入れ替えることで$A_0 + I \times D$
 但し $\sum_{i=0}^{k-1} i \leq I \leq \sum_{i=N-k}^{N-1} i$となる部分和が全て作れることがわかる。
 
 $mod D$が同じ値となるものごとに座標圧縮、imos法による区間和をとると答えが得られる。
+
+### Citation
+https://atcoder.jp/contests/abc147/tasks/abc147_f
+
