--- a/abc148.md
+++ b/abc148.md
@@ -15,3 +15,7 @@ $N$頂点の木の無向木上の頂点$u$にAがいて、頂点$v$にBがいる
 Bより早く到達できる点であればAはどこでも到達できる。
 
 そのような点のうち、Bから最も遠いものが答え。DFSで探す。
+
+### Citation
+https://atcoder.jp/contests/abc148/tasks/abc148_f
+
